# aktools

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
homebrew/: aktools.rb
src/: main.rs  registry.rs
src/commands/: add.rs  autoupdate.rs  build_command.rs  completion.rs  doctor.rs  edit.rs  edit_aliases.rs  help.rs  help_cmd.rs  init.rs  list.rs  mod.rs  repos.rs  rm.rs  run.rs  update.rs  upgrade.rs
src/modules/: mod.rs
