[package]
name = "aktools"
version = "0.0.46"
edition = "2021"
description = "Modular CLI tool runner with module registry"
authors = ["akinus"]
homepage = "https://github.com/akinus/aktools"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
ureq = "2.9"

[target.'cfg(not(windows))'.dependencies]
nix = "0.26"

[profile.release]
strip = true
lto = true
codegen-units = 1
